feat: Expand Japanese search scope and remove observe category
- Add more Japanese keywords (生成AI, AIエージェント, DX推進, 業務効率化, etc.)

- Add Japanese AI influencers (shi3z, ochyai, masason, etc.)

- Lower thresholds for Japanese market (3000 absolute, 500 growth)

- Remove elonmusk from followed accounts

- Remove 仅观察 category to save tokens

- AI now skips low-relevance posts instead of marking them

--- a/config.json
+++ b/config.json
@@ -10,17 +10,42 @@
     "real-time translation",
     "企業AI",
     "会議録",
-    "ナレッジマネジメント"
+    "ナレッジマネジメント",
+    "生成AI",
+    "AIエージェント",
+    "RAG検索",
+    "AIチャットボット",
+    "議事録自動化",
+    "社内FAQ",
+    "DX推進",
+    "業務効率化",
+    "AI導入",
+    "LLM活用",
+    "ChatGPT 企業",
+    "Claude 活用",
+    "音声認識 AI",
+    "リアルタイム翻訳",
+    "多言語対応",
+    "カスタマーサポート AI",
+    "ヘルプデスク 自動化"
   ],
   "followed_accounts": [
-    "elonmusk",
-    "sama",
-    "karpathy",
     "OpenAI",
     "AnthropicAI",
-    "GoogleAI"
+    "GoogleAI",
+    "sama",
+    "karpathy",
+    "shaboratory",
+    "hillbig",
+    "ymotongpoo",
+    "shi3z",
+    "ochyai",
+    "masason",
+    "takaboratory",
+    "kajiken0630",
+    "ababoratory"
   ],
-  "rapid_growth_threshold": 1000,
-  "absolute_threshold": 5000,
-  "check_interval_minutes": 30
+  "rapid_growth_threshold": 500,
+  "absolute_threshold": 3000,
+  "check_interval_minutes": 60
 }
